plugins {
    id 'java'
    id 'application'
    id 'io.freefair.lombok' version '8.4'
}

project.ext.lwjglVersion = '3.3.3'
project.ext.jomlVersion = '1.10.5'
project.ext.lwjglNatives = 'natives-windows'

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    // LWJGL dependencies
    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    implementation 'org.lwjgl:lwjgl'
    implementation 'org.lwjgl:lwjgl-assimp'
    implementation 'org.lwjgl:lwjgl-glfw'
    implementation 'org.lwjgl:lwjgl-opengl'
    implementation 'org.lwjgl:lwjgl-stb'
    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
    implementation "org.joml:joml:${jomlVersion}"

    // JSON
    implementation group: 'org.json', name: 'json', version: '20240205'

    // SLF4J and Log4j dependencies
    implementation 'org.slf4j:slf4j-api:1.7.32'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
}

application {
    // Define the main class for the application
    mainClass = 'de.jcing.Main'
}

sourceSets {
    main {
        resources {
            srcDirs = ['res/gfx', 'config']
        }
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview', '--release', '21'] // Replace VERSION with your Java version, e.g., 17
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

tasks.run {
    // Specify the classpath for running the application
    classpath = sourceSets.main.runtimeClasspath
}
